Removed FoodOption
