# src/main/java/io/swagger/api/FoodOptionApi.java
@@ -1,37 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (1.0.11).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package io.swagger.api;
-
-import io.swagger.annotations.*;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.util.List;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-02-20T04:00:38.477Z")
-
-@Api(value = "foodOption", description = "the foodOption API")
-public interface FoodOptionApi {
-
-    @ApiOperation(value = "And a food option to the enumeration of options", nickname = "addFoodOption", notes = "Add a food option to the enumeration of options. In a complete system, this would contain APIs to update, search, and delete, but for this demo, add will do. A Food Option is an option that may conceivably be added to many different menu items, such as olives, which could be added to a pizza or a submarine sandwich. It consists of nothing but a name, so the foodOption table is essentially a modifiable enumeration. These are referred to in the MenuItemOption table. ", tags={  })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 201, message = "Food Option Created"),
-        @ApiResponse(code = 400, message = "Bad Request") })
-    @RequestMapping(value = "/foodOption",
-        produces = { "application/json" }, 
-        method = RequestMethod.PUT)
-    ResponseEntity<Void> addFoodOption(@NotNull @ApiParam(value = "View text of the Food option", required = true) @Valid @RequestParam(value = "name", required = true) String name);
-
-}
