# src/main/java/io/swagger/api/MenuItemApiController.java
@@ -4,14 +4,13 @@ import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.List;
 import javax.validation.Valid;
-import com.disney.miguelmunoz.challenge.entities.FoodOption;
 import com.disney.miguelmunoz.challenge.entities.MenuItem;
 import com.disney.miguelmunoz.challenge.entities.MenuItemOption;
 import com.disney.miguelmunoz.challenge.exception.ResponseException;
 import com.disney.miguelmunoz.challenge.repositories.MenuItemOptionRepository;
 import com.disney.miguelmunoz.challenge.repositories.MenuItemRepository;
+import com.disney.miguelmunoz.challenge.util.ResponseUtility;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import io.swagger.model.FoodOptionDto;
 import io.swagger.model.MenuItemDto;
 import io.swagger.model.MenuItemOptionDto;
 import org.slf4j.Logger;
@@ -38,30 +37,34 @@ public class MenuItemApiController implements MenuItemApi {
   @Autowired
   private final MenuItemRepository menuItemRepository;
   
-//  @Autowired
-//  private final MenuItemOptionRepository menuItemOptionRepository;
+  @Autowired
+  private final MenuItemOptionRepository menuItemOptionRepository;
   
   public MenuItemApiController(
       ObjectMapper objectMapper, 
-//      MenuItemOptionRepository menuItemOptionRepository,
+      MenuItemOptionRepository menuItemOptionRepository,
       MenuItemRepository menuItemRepository
   ) {
     this.objectMapper = objectMapper;
     this.menuItemRepository = menuItemRepository;
-//    this.menuItemOptionRepository = menuItemOptionRepository;
+    this.menuItemOptionRepository = menuItemOptionRepository;
+  }
+
+  @Override
+  public ResponseEntity<Void> addMenuItemOption(final String menuItemId, final MenuItemOptionDto option) {
+    return null;
   }
 
   @Override
   public ResponseEntity<String> addMenuItem(@Valid @RequestBody MenuItemDto menuItemDto) {
     try {
       for (MenuItemOptionDto option : skipNull(menuItemDto.getAllowedOptions())) {
-        final FoodOptionDto foodOption = option.getFoodOption();
-        if (foodOption == null || foodOption.getId() == null) {
-          throw new ResponseException(HttpStatus.BAD_REQUEST, "Missing Food Option for item");
+        final String optionName = option.getName();
+        if (optionName == null || optionName.isEmpty()) {
+          throw new ResponseException(HttpStatus.BAD_REQUEST, "Missing Food Option name for item");
         }
       }
       MenuItem menuItem = convertMenuItem(menuItemDto);
-//      MenuItem menuItem = objectMapper.convertValue(menuItemDto, MenuItem.class);
       MenuItem savedItem = menuItemRepository.save(menuItem);
       return makeCreatedResponseWithId(savedItem.getId());
     } catch (ResponseException e) {
@@ -87,11 +90,22 @@ public class MenuItemApiController implements MenuItemApi {
     int index = 0;
     for (MenuItemOptionDto menuItemOptionDto : allowedOptions) {
       final MenuItemOption menuItemOption = new MenuItemOption();
-      menuItemOption.setFoodOption(objectMapper.convertValue(menuItemOptionDto.getFoodOption(), FoodOption.class));
+      menuItemOption.setName(menuItemOptionDto.getName());
       menuItemOption.setDeltaPrice(new BigDecimal(menuItemOptionDto.getDeltaPrice()));
       array[index++] = menuItemOption;
     }
     return array;
+  }
+
+  @Override
+  public ResponseEntity<Void> deleteOption(final String optionId) {
+    try {
+      Integer id = decodeIdString(optionId);
+      menuItemOptionRepository.delete(id);
+      return new ResponseEntity<>(HttpStatus.OK);
+    } catch (ResponseException e) {
+      return ResponseUtility.makeResponse(e);
+    }
   }
 
   ////// For unit tests //////
